Added Template Section

--- a/Plate1-YuzuTart/index.html
+++ b/Plate1-YuzuTart/index.html
@@ -21,5 +21,16 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus ab voluptatibus doloribus aut consequuntur eius!</p>
         </div>
     </div>
+
+    <section class="about">
+        <div class="contentBx">
+            <h2 class="heading">About</h2>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eveniet neque exercitationem! Eligendi provident sed architecto consectetur magni minus, assumenda amet incidunt nisi, facilis, ab quam commodi sint odit voluptatibus delectus eaque consequatur reprehenderit dolore in sequi fugit esse temporibus id? Eius cupiditate temporibus in labore fugit deleniti vero porro? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ab veritatis, repellat earum nesciunt dolor.   
+                </p>
+        </div>
+        <div class="imgBx"></div>
+    </section>
+
+
 </body>
 </html>
