--- a/Plate1-YuzuTart/index.html
+++ b/Plate1-YuzuTart/index.html
@@ -31,6 +31,40 @@
         <div class="imgBx"></div>
     </section>
 
+    <section class="services">
+        <h2 class="heading">Ingredients</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum dolorum dolore natus ipsa saepe non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, nisi debitis distinctio nam odit dolore?</p>
+        <div class="container">
+            <div class="serviceBx">
+                <div>
+                    <img src="" alt="">
+                    <h2>Ingredient</h2>
+                </div>
+            </div>
+            <div class="serviceBx">
+                <div>
+                    <img src="" alt="">
+                    <h2>Ingredient</h2>
+                </div>
+            </div>
+            <div class="serviceBx">
+                <div>
+                    <img src="" alt="">
+                    <h2>Ingredient</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="technology">
+        <div class="contentBx">
+            <h2 class="heading">History of Dish</h2>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eos quae nihil officia dolores nisi. Dolore exercitationem laboriosam aliquam adipisci in animi nostrum maxime temporibus. Voluptatem odit, vel minus magni perferendis voluptatibus aut perspiciatis iusto iste commodi saepe quod nam.</p>
+        </div>
+        <div class="imgBx">
+            <img src="" alt="">
+        </div>
+    </section>
 
 </body>
 </html>
