--- a/Plate1-YuzuTart/index.html
+++ b/Plate1-YuzuTart/index.html
@@ -66,5 +66,62 @@
         </div>
     </section>
 
+    <section class="client">
+        <h2 class="heading">Placeholder</h2>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor nisi deserunt distinctio aliquid officiis aliquam sed aut rem magni vel. Quos nostrum dolorum repellat cumque!</p>
+        <div class="imgBx">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </section>
+
+    <section class="testimonials">
+        <h2 class="heading">Placeholder</h2>
+        <div class="container">
+            <div class="contentBx">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas pariatur quae, provident commodi doloremque, aut excepturi ducimus sit, quibusdam iste sunt itaque odit! Provident, aperiam!</p>
+                    <h3>Placeholder</h3>
+                </div>
+            </div>
+            <div class="contentBx">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas pariatur quae, provident commodi doloremque, aut excepturi ducimus sit, quibusdam iste sunt itaque odit! Provident, aperiam!</p>
+                    <h3>Placeholder</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact">
+        <h2 class="heading">Contact</h2>
+        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dolores rem nostrum asperiores nemo hic esse quaerat at illum autem voluptatem vero, ad doloremque aperiam nulla libero eius expedita! Fugit?</p>
+    </section>
+
+    <section class="about">
+        <div class="contentBx">
+            <div class="form">
+                <div class="inputBx">
+                    <input type="text" name="" placeholder="Full Name">
+                </div>
+                <div class="inputBx">
+                    <input type="text" name="" placeholder="Email Address">
+                </div>
+                <div class="inputBx">
+                    <input type="text" name="" placeholder="Mobile Number">
+                </div>
+                <div class="inputBx">
+                    <textarea placeholder="Suggest a Plate"></textarea>
+                </div>
+                <div class="inputBx">
+                    <input type="submit" name="" value="Send">
+                </div>
+            </div>
+        </div>
+        <div class="imgBx imgBx2"></div>
+    </section>
+
 </body>
 </html>
