--- a/Plate1-YuzuTart/index.html
+++ b/Plate1-YuzuTart/index.html
@@ -33,7 +33,7 @@
 
     <section class="services">
         <h2 class="heading">Ingredients</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum dolorum dolore natus ipsa saepe non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, nisi debitis distinctio nam odit dolore?</p>
+        <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum dolorum dolore natus ipsa saepe non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, nisi debitis distinctio nam odit dolore?</p>
         <div class="container">
             <div class="serviceBx">
                 <div>
@@ -101,7 +101,7 @@
     </section>
 
     <section class="about">
-        <div class="contentBx">
+        <div class="contentBx redbg">
             <div class="form">
                 <div class="inputBx">
                     <input type="text" name="" placeholder="Full Name">
@@ -120,8 +120,11 @@
                 </div>
             </div>
         </div>
-        <div class="imgBx imgBx2"></div>
+        <div class="imgBx2"></div>
     </section>
 
+    <section class="footer">
+        <p class="text">I hope you enjoyed this first plate and will come back for more.</p>
+    </section>
 </body>
 </html>
