--- a/Plate1-YuzuTart/index.html
+++ b/Plate1-YuzuTart/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Plate to Page - P1</title>
+    <title>Plate to Page - Plate 1</title>
 </head>
 <body>
     <div class="banner">
@@ -14,11 +14,12 @@
             <div class="toggle">
                 <svg className="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fillRule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clipRule="evenodd" /></svg>            </div>
         </header>
-        <img src="tempback.jpg" alt="">
+        <img src="https://res.cloudinary.com/dvug8hy5k/image/upload/v1616866750/Plate%20to%20Page/pepe-nero-FHtP6sKF7bY-unsplash_bjmz4m.jpg" alt="">
         <div class="content">
-            <h2>P1 - Insert Dish</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus ab voluptatibus doloribus aut consequuntur eius!</p>
+            <img src="https://res.cloudinary.com/dvug8hy5k/image/upload/v1616866762/Plate%20to%20Page/3E213431-698B-46C7-9E49-590301BE0B21_of3o3h.jpg" alt="" id="dish">
+            <h2>Yuzu Meringue Tart</h2>
         </div>
+
     </div>
 
     <section class="about">
