--- a/Plate1-YuzuTart/index.html
+++ b/Plate1-YuzuTart/index.html
@@ -23,34 +23,34 @@
     </div>
 
     <section class="about">
-        <div class="contentBx">
-            <h2 class="heading">About</h2>
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eveniet neque exercitationem! Eligendi provident sed architecto consectetur magni minus, assumenda amet incidunt nisi, facilis, ab quam commodi sint odit voluptatibus delectus eaque consequatur reprehenderit dolore in sequi fugit esse temporibus id? Eius cupiditate temporibus in labore fugit deleniti vero porro? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ab veritatis, repellat earum nesciunt dolor.   
-                </p>
+            <div class="contentBx">
+                <h2 class="heading">Plate 1 - Yuzu Meringue Tart</h2>
+                <p class="text">Welcome to plate 1 of "Plate to Page" where I take a dish I've made, enjoyed or a suggestion and make a page dedicated to that dish. I wanted to start this series with one of the desserts that is very special to me, the yuzu meringue tart. It's special because it is one of the last desserts I made before becoming a developer. It was the first dessert that I made as I prepared to go for my first Michelin Star.</p>
+            </div>
+            <div class="imgBx"></div>
         </div>
-        <div class="imgBx"></div>
     </section>
 
-    <section class="services">
+    <section class="ingredients">
         <h2 class="heading">Ingredients</h2>
         <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum dolorum dolore natus ipsa saepe non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, nisi debitis distinctio nam odit dolore?</p>
         <div class="container">
-            <div class="serviceBx">
+            <div class="ingredientBx">
                 <div>
-                    <img src="" alt="">
-                    <h2>Ingredient</h2>
+                    <img src="https://res.cloudinary.com/dvug8hy5k/image/upload/v1616883761/Plate%20to%20Page/yuzu-japanese-citrus-732x549-thumbnail_wy8gls.jpg" alt="">
+                    <h2>Fresh Yuzu Juice</h2>
                 </div>
             </div>
-            <div class="serviceBx">
+            <div class="ingredientBx">
                 <div>
-                    <img src="" alt="">
-                    <h2>Ingredient</h2>
+                    <img src="https://res.cloudinary.com/dvug8hy5k/image/upload/v1616883948/Plate%20to%20Page/Sweet-Tart-Crust-Recipe-4_fv3i0h.jpg" alt="">
+                    <h2>Hand-made Sweet Dough</h2>
                 </div>
             </div>
-            <div class="serviceBx">
+            <div class="ingredientBx">
                 <div>
-                    <img src="" alt="">
-                    <h2>Ingredient</h2>
+                    <img src="https://res.cloudinary.com/dvug8hy5k/image/upload/v1616883948/Plate%20to%20Page/berries-pin_cgqjoi.jpg" alt="">
+                    <h2>Fresh Raspberries</h2>
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
 
     <section class="technology">
         <div class="contentBx">
-            <h2 class="heading">History of Dish</h2>
+            <h2 class="heading">History of Yuzu</h2>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eos quae nihil officia dolores nisi. Dolore exercitationem laboriosam aliquam adipisci in animi nostrum maxime temporibus. Voluptatem odit, vel minus magni perferendis voluptatibus aut perspiciatis iusto iste commodi saepe quod nam.</p>
         </div>
         <div class="imgBx">
