--- a/Plate1-YuzuTart/index.html
+++ b/Plate1-YuzuTart/index.html
@@ -26,6 +26,7 @@
             <div class="contentBx">
                 <h2 class="heading">Plate 1 - Yuzu Meringue Tart</h2>
                 <p class="text">Welcome to plate 1 of "Plate to Page" where I take a dish I've made, enjoyed or a suggestion and make a page dedicated to that dish. I wanted to start this series with one of the desserts that is very special to me, the yuzu meringue tart. It's special because it is one of the last desserts I made before becoming a developer. It was the first dessert that I made as I prepared to go for my first Michelin Star.</p>
+                <br><p class="text">Now, onto the dessert itself, the yuzu meringue tart. This version is a variation of the classic lemon tart where I replaced the lemon juice with yuzu. It's a small change that makes a big impact in flavor.</p>
             </div>
             <div class="imgBx"></div>
         </div>
