Added Recipes and Process

--- a/Plate1-YuzuTart/index.html
+++ b/Plate1-YuzuTart/index.html
@@ -33,8 +33,50 @@
     </section>
 
     <section class="ingredients">
-        <h2 class="heading">Ingredients</h2>
-        <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum dolorum dolore natus ipsa saepe non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, nisi debitis distinctio nam odit dolore?</p>
+        <h2 class="heading">Recipe</h2>
+        <p class="text">A meringue pie is a true indication of skill for any pastry Chef. Zingy, sharp and fragrant but also indulgent.</p>
+        <div class="recipecontainer">
+            <div class="ingredientlist">
+                <h2>Ingredients</h2>
+                <p>Sweet Dough</p>
+                <ul>
+                    <li>175g Flour</li>
+                    <li>25g Granulated Sugar</li>
+                    <li>100g Unsalted Butter</li>
+                    <li>1 Egg Yolk</li>
+                    <li>1 Tbsp Water (as needed)</li>
+                </ul>
+
+                <p>Yuzu Filling</p>
+                <ul>
+                    <li>Juice and Zest of 1/2 lemon</li>
+                    <li>120ml Yuzu Juice</li>
+                    <li>150g Granulated Sugar</li>
+                    <li>100g Unsalted Butter, Cubed</li>
+                    <li>6 Eggs</li>
+                </ul>
+            </div>
+            <div class="process">
+                <h2>Method</h2>
+                <p>Preparing the Pastry</p>
+                <ul>
+                    <li>Add the flour, sugar, salt, and butter to food processor and pulse until it looks like sand. Add egg yolk and water and mix until dough comes together. Press dough together until smooth ball of dough has formed. Cover in plastic to rest in fridge for 20 mins.
+                    </li>
+                </ul>
+                <p>Baking the Tart Shells</p>
+                <ul>
+                    <li>Preheat oven to 180°C. Place dough between two sheets of parchment paper and roll until 5mm thick. For this part you can use either a 9 inch loose bottom pan or 8cm mini tart tins, this specific recipe will be for the mini tarts. Place the tins on dough and cut around the rim, leaving 2-3cm extra around the edges. Carefully place the dough into the tin and gently press the dough into it. Trim any excess dough and prick the base with a fork. Place tart shells into the fridge for 30 mins. </li>
+                    <li>Cut out squares with parchment paper to a size that is slightly larger than the tins and line the tins with them. Fill the parchment paper with baking beans or rice and blind bake them for 10 minutes. After the initial 10 minutes, remove the parchment paper and beans/rice and back for another 5-10 minutes until shell is lightly golden. Set Aside to Cool.</li>
+                </ul>
+                <p>Preparing the Filling and Assembly</p>
+                <ul>
+                    <li>Fill a small saucepan halfway with water and bring to a simmer on the stove. Combine the lemon juice, zest and yuzu juice In a heatproof bowl, whisk together the granulated sugar, eggs until smooth and fluffy.</li>
+                    <li>Place the bowl over the saucepan and whisk the egg mixture for about 2 minutes until it has slightly thickened. Pour in half of the juice mixture and whisk for another 5-10 minutes, or until the mixture starts to thicken again, pour in the remaining mixture and whisk for another 10-15 minutes until mixture is thick and glossy.</li>
+                    <li>Remove from heat and add butter one cube at a time until all butter has been melted and incorporated. Strain liquid and pour into a pitcher and cool slightly.</li>
+                    <li>To Assemble the tarts just pour the yuzu curd into the tart shells and chill for at least 1 hour or until the curd has completely set. Serve and enjoy!</li>
+                </ul>
+            </div>
+        </div>
         <div class="container">
             <div class="ingredientBx">
                 <div>
@@ -45,7 +87,7 @@
             <div class="ingredientBx">
                 <div>
                     <img src="https://res.cloudinary.com/dvug8hy5k/image/upload/v1616883948/Plate%20to%20Page/Sweet-Tart-Crust-Recipe-4_fv3i0h.jpg" alt="">
-                    <h2>Hand-made Sweet Dough</h2>
+                    <h2>Hand-made Dough</h2>
                 </div>
             </div>
             <div class="ingredientBx">
@@ -57,17 +99,17 @@
         </div>
     </section>
 
-    <section class="technology">
+    <section class="history">
         <div class="contentBx">
             <h2 class="heading">History of Yuzu</h2>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eos quae nihil officia dolores nisi. Dolore exercitationem laboriosam aliquam adipisci in animi nostrum maxime temporibus. Voluptatem odit, vel minus magni perferendis voluptatibus aut perspiciatis iusto iste commodi saepe quod nam.</p>
         </div>
-        <div class="imgBx">
+        <!-- <div class="imgBx">
             <img src="" alt="">
-        </div>
+        </div> -->
     </section>
 
-    <section class="client">
+    <!-- <section class="client">
         <h2 class="heading">Placeholder</h2>
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor nisi deserunt distinctio aliquid officiis aliquam sed aut rem magni vel. Quos nostrum dolorum repellat cumque!</p>
         <div class="imgBx">
@@ -76,9 +118,9 @@
             <img src="" alt="">
             <img src="" alt="">
         </div>
-    </section>
+    </section> -->
 
-    <section class="testimonials">
+    <!-- <section class="testimonials">
         <h2 class="heading">Placeholder</h2>
         <div class="container">
             <div class="contentBx">
@@ -94,7 +136,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="contact">
         <h2 class="heading">Contact</h2>
@@ -110,9 +152,9 @@
                 <div class="inputBx">
                     <input type="text" name="" placeholder="Email Address">
                 </div>
-                <div class="inputBx">
+                <!-- <div class="inputBx">
                     <input type="text" name="" placeholder="Mobile Number">
-                </div>
+                </div> -->
                 <div class="inputBx">
                     <textarea placeholder="Suggest a Plate"></textarea>
                 </div>
@@ -125,7 +167,7 @@
     </section>
 
     <section class="footer">
-        <p class="text">I hope you enjoyed this first plate and will come back for more.</p>
+        <p class="text">Plate to Page | ©2020 Designs by Sometimes</p>
     </section>
 </body>
 </html>
