--- a/Plate1-YuzuTart/index.html
+++ b/Plate1-YuzuTart/index.html
@@ -101,46 +101,15 @@
 
     <section class="history">
         <div class="contentBx">
-            <h2 class="heading">History of Yuzu</h2>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eos quae nihil officia dolores nisi. Dolore exercitationem laboriosam aliquam adipisci in animi nostrum maxime temporibus. Voluptatem odit, vel minus magni perferendis voluptatibus aut perspiciatis iusto iste commodi saepe quod nam.</p>
+            <h2 class="heading">What is Yuzu?</h2>
+            <p class="text">Yuzu is a traditional Japanese citrus fruit that has been used to season local cuisine from old times. Unlike a tangerine that is eaten as it is, yuzu is normally used to bring out the flavor and fragrance of Japanese cuisine. A distinctive refreshing aroma is the main feature of yuzu. Although both its juice and peel are full of aroma, its peel contains high levels of aroma constituents and can be finely grated and sprinkled over raw or grilled fish to enhance the flavor. The yuzu produced in Japan have an unrivaled, rich aroma, having been cultivated mostly in inland mountain areas, where there is a significant temperature gap between daytime and nighttime.</p>
         </div>
-        <!-- <div class="imgBx">
-            <img src="" alt="">
-        </div> -->
+
     </section>
 
-    <!-- <section class="client">
-        <h2 class="heading">Placeholder</h2>
-        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor nisi deserunt distinctio aliquid officiis aliquam sed aut rem magni vel. Quos nostrum dolorum repellat cumque!</p>
-        <div class="imgBx">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-        </div>
-    </section> -->
-
-    <!-- <section class="testimonials">
-        <h2 class="heading">Placeholder</h2>
-        <div class="container">
-            <div class="contentBx">
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas pariatur quae, provident commodi doloremque, aut excepturi ducimus sit, quibusdam iste sunt itaque odit! Provident, aperiam!</p>
-                    <h3>Placeholder</h3>
-                </div>
-            </div>
-            <div class="contentBx">
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas pariatur quae, provident commodi doloremque, aut excepturi ducimus sit, quibusdam iste sunt itaque odit! Provident, aperiam!</p>
-                    <h3>Placeholder</h3>
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <section class="contact">
-        <h2 class="heading">Contact</h2>
-        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dolores rem nostrum asperiores nemo hic esse quaerat at illum autem voluptatem vero, ad doloremque aperiam nulla libero eius expedita! Fugit?</p>
+        <p class="thankyoutext">Thank you for sharing this first plate with me. I hope you enjoyed it and I hope you'll join me for more plates. We have many more to come!</p>
     </section>
 
     <section class="about">
@@ -152,9 +121,6 @@
                 <div class="inputBx">
                     <input type="text" name="" placeholder="Email Address">
                 </div>
-                <!-- <div class="inputBx">
-                    <input type="text" name="" placeholder="Mobile Number">
-                </div> -->
                 <div class="inputBx">
                     <textarea placeholder="Suggest a Plate"></textarea>
                 </div>
