Updated Recipe and Process

--- a/Plate2-PannaCotta/index.html
+++ b/Plate2-PannaCotta/index.html
@@ -53,7 +53,7 @@
                     <li>150g Granulated Sugar</li>
                     <li>3 Large Sheets Gelatin (Soaked in Cold Water)</li>
                     <li>250ml Creme Fraiche</li>
-                    <li>150ml Heavy Cream</li>
+                    <li>150ml Heavy Cream, Semi-Whipped</li>
                 </ul>
 
                 <p>Sake Jelly</p>
@@ -65,22 +65,24 @@
             </div>
             <div class="process">
                 <h2>Method</h2>
-                <p>Preparing the Pastry</p>
+                <p>Raspberry Coulis</p>
                 <ul>
                     <li>Add the flour, sugar, salt, and butter to food processor and pulse until it looks like sand. Add egg yolk and water and mix until dough comes together. Press dough together until smooth ball of dough has formed. Cover in plastic to rest in fridge for 20 mins.
                     </li>
                 </ul>
-                <p>Baking the Tart Shells</p>
+                <p>Panna Cotta</p>
                 <ul>
-                    <li>Preheat oven to 180°C. Place dough between two sheets of parchment paper and roll until 5mm thick. For this part you can use either a 9 inch loose bottom pan or 8cm mini tart tins, this specific recipe will be for the mini tarts. Place the tins on dough and cut around the rim, leaving 2-3cm extra around the edges. Carefully place the dough into the tin and gently press the dough into it. Trim any excess dough and prick the base with a fork. Place tart shells into the fridge for 30 mins. </li>
+                    <li>Put the milk into a saucepan and set over medium heat and bring to a boil. In a separate bowl whisk together egg yolks and sugar. Pour the hot milk slowly into the egg and sugar mixture, whisking continuously to combine. <span>You want to make sure you do this slowly otherwise you’ll end up with scrambled eggs and have to start over.<span></li>
                     <li>Cut out squares with parchment paper to a size that is slightly larger than the tins and line the tins with them. Fill the parchment paper with baking beans or rice and blind bake them for 10 minutes. After the initial 10 minutes, remove the parchment paper and beans/rice and back for another 5-10 minutes until shell is lightly golden. Set Aside to Cool.</li>
                 </ul>
-                <p>Preparing the Filling and Assembly</p>
+                <p>Sake Jelly</p>
                 <ul>
-                    <li>Fill a small saucepan halfway with water and bring to a simmer on the stove. Combine the lemon juice, zest and yuzu juice In a heatproof bowl, whisk together the granulated sugar, eggs until smooth and fluffy.</li>
-                    <li>Place the bowl over the saucepan and whisk the egg mixture for about 2 minutes until it has slightly thickened. Pour in half of the juice mixture and whisk for another 5-10 minutes, or until the mixture starts to thicken again, pour in the remaining mixture and whisk for another 10-15 minutes until mixture is thick and glossy.</li>
-                    <li>Remove from heat and add butter one cube at a time until all butter has been melted and incorporated. Strain liquid and pour into a pitcher and cool slightly.</li>
-                    <li>To Assemble the tarts just pour the yuzu curd into the tart shells and chill for at least 1 hour or until the curd has completely set. Serve and enjoy!</li>
+                    <li>Put sugar and 100ml of sake into a saucepan over medium heat and stir until the sugar has completely dissolved. Once the sugar has dissolved remove the sake from the heat. Remove the gelatin from the cold water and squeeze the excess liquid. Add gelatin to the mixture and stir until it has dissolved completely. Add the remaining 400ml of sake to the mixture and set aside to cool, but not set. (See Assembly)</li>
+                </ul>
+                <p>Assembly</p>
+                <ul>
+                    <li>Assembly is going to take time so I would not recommend doing this last minute. To build this dessert you will need a specialty cocktail glass, as seen in the picture, or any glassware of your choosing. Before pouring in the panna cotta mixture you will need to set the glassware to an angle in a stable position to ensure the panna cotta sets properly (and no mess is made). Pour in the panna cotta mixture roughly two thirds of the way up the glass and place in your cooler until it has set enough to be able stay in place when the glass is upright, approximately 15-20 minutes. </li>
+                    <li>Once the panna cotta has set enough you’ll place the glass upright and pour in the sake mixture about half of the way up and place back in the cooler until it has set completely. After the jelly has set completely you can add the raspberry coulis on top of the sake jelly, garnish, and you are ready to serve and enjoy!</li>
                 </ul>
             </div>
         </div>
