--- a/Plate2-PannaCotta/index.html
+++ b/Plate2-PannaCotta/index.html
@@ -67,13 +67,14 @@
                 <h2>Method</h2>
                 <p>Raspberry Coulis</p>
                 <ul>
-                    <li>Add the flour, sugar, salt, and butter to food processor and pulse until it looks like sand. Add egg yolk and water and mix until dough comes together. Press dough together until smooth ball of dough has formed. Cover in plastic to rest in fridge for 20 mins.
+                    <li>Combine raspberries, sugar, lychee juice in a saucepan over medium-low heat. Cook raspberries, using spatula to smash raspberries, until they are soft and syrupy. Once they have reached this consistency pour them through a fine mesh sieve over a bowl, using your spatula to press the liquid through. Discard seeds.
                     </li>
                 </ul>
                 <p>Panna Cotta</p>
                 <ul>
                     <li>Put the milk into a saucepan and set over medium heat and bring to a boil. In a separate bowl whisk together egg yolks and sugar. Pour the hot milk slowly into the egg and sugar mixture, whisking continuously to combine. <span>You want to make sure you do this slowly otherwise you’ll end up with scrambled eggs and have to start over.<span></li>
-                    <li>Cut out squares with parchment paper to a size that is slightly larger than the tins and line the tins with them. Fill the parchment paper with baking beans or rice and blind bake them for 10 minutes. After the initial 10 minutes, remove the parchment paper and beans/rice and back for another 5-10 minutes until shell is lightly golden. Set Aside to Cool.</li>
+                    <li> Once combined, return the mixture to the pan over low heat and stir continuously with a spatula, or wooden spoon, until the custard is thick enough to coat the back of the spoon, approximately 5 minutes. Remove the gelatin from the cold water and squeeze the excess liquid our and add it to the mixture, stirring until it’s dissolved. Strain the mixture through a fine-mesh sieve into a bowl to cool.</li>
+                    <li>Once the mixture has cooled whisk in the crème fraiche until it’s almost fully incorporated and then add the semi-whipped cream. Whisk mixture until no lumps remain and it is smooth, transfer mixture to a pitcher. (See Assembly)</li>
                 </ul>
                 <p>Sake Jelly</p>
                 <ul>
@@ -110,8 +111,8 @@
 
     <section class="history">
         <div class="contentBx">
-            <h2 class="heading">What is Yuzu?</h2>
-            <p class="text">Yuzu is a traditional Japanese citrus fruit that has been used to season local cuisine from old times. Unlike a tangerine that is eaten as it is, yuzu is normally used to bring out the flavor and fragrance of Japanese cuisine. A distinctive refreshing aroma is the main feature of yuzu. Although both its juice and peel are full of aroma, its peel contains high levels of aroma constituents and can be finely grated and sprinkled over raw or grilled fish to enhance the flavor. The yuzu produced in Japan have an unrivaled, rich aroma, having been cultivated mostly in inland mountain areas, where there is a significant temperature gap between daytime and nighttime.</p>
+            <h2 class="heading">A Brief History of Sake</h2>
+            <p class="text">Sake is a traditional Japanese alcohol made from fermented rice. In Japan it is known as “nihonshu, ” which translates to “Japanese liquor.” It is the national beverage of Japan and is often served during formal ceremonies, special events, and national holidays. It is typically poured from a tall bottle called a tokkuri and drunk from a sakazuki, which is a small porcelain cup. The exact origin of sake is unclear because it predates recorded history but the earliest known production took place in China roughly around 500 BC. The original method of sake production involved villagers chewing rice and spitting it into a communal pot. Enzymes in the saliva would trigger the fermentation process. During the Nara period in Japan, a mold enzyme “koji” was discovered and it was something that could be added to rice to trigger the fermentation process. This new brewing technique spread throughout Japan and ultimately resulted in sake as we know it today. </p>
         </div>
 
     </section>
